# Unitree_Go2

./: .gitignore  README.md  docker-compose.yaml
docs/: TRANSFER_WORKSPACE.md  WORKSPACE_CONSOLIDATION.md
go2_roughnav/: setup.cfg
go2_roughnav/config/: fastlio_go2_hw.yaml  fastlio_mujoco.yaml  rl_interface.yaml  trg_ros2_params_roughnav.yaml
go2_roughnav/go2_roughnav/: __init__.py  auto_goal_publisher.py  height_scan_bridge.py  isaac_udp_ros2_bridge.py  mujoco_go2_bridge.py  terrain_generator.py
go2_roughnav/launch/: 02_fastlio_only.launch.py
go2_roughnav/rviz/: isaac_debug.rviz
planning/trg_planner/: .gitignore
ros2/go2_roughnav/: .gitignore  package.xml  setup.py
ros2/go2_roughnav/config/: fastlio_isaac.yaml  fastlio_mujoco.yaml  fastlio_real_go2.yaml  fastlio_roughnav.yaml  isaac_bridge.yaml  roughnav.yaml  trg_ros2_params_isaac.yaml
ros2/go2_roughnav/go2_roughnav/: fake_isaac_udp_sender.py  mujoco_go2_bridge.py  path_to_cmd_vel.py  pipeline_health.py  rough_local_controller.py  traversability_node.py
ros2/go2_roughnav/launch/: 01_isaac_bridge_rviz.launch.py  03_trg_only.launch.py  04_full_isaac_pipeline.launch.py  roughnav.launch.py
ros2/go2_roughnav/resource/: go2_roughnav
ros2/go2_roughnav/rviz/: icros2025_trg_debug.rviz  roughnav.rviz  teleop_map_debug.rviz
scripts/: install_workspace_env.sh  setup_ros2_workspace.sh  workspace_env.sh
unitree_mujoco_go2/: scene_icros2025.xml  scene_icros2026.xml
unitree_rl_lab/docker/: .env.base  Dockerfile.ros2_humble_go2
unitree_rl_lab/scripts/: auto_monitor_competition.py  export_onnx_standalone.py
(+119 files in other folders)
