<?xml version="1.0"?>
<package format="3">
  <name>go2_roughnav</name>
  <version>0.1.0</version>
  <description>Rough-terrain autonomy glue for MuJoCo Go2, FAST-LIO, and TRG-planner.</description>
  <maintainer email="user@example.com">jeonbotdae</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
